--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,4 +25,4 @@ jobs:
       - name: deploy
         run: |
           cd web
-          scp -r build/ /var/www/web
+          scp -r build /var/www/web
