--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,4 +25,4 @@ jobs:
       - name: deploy
         run: |
           cd web
-          cp -r build /var/www/web
+          cp -r build/* /var/www/web
