--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,8 +18,15 @@ jobs:
           yarn install
 
       - name: yarn build
+        env:
+          CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
+          ISSUER: ${{ secrets.VITE_ISSUER }}
         run: |
           cd web
+          rm .env
+          touch .env
+          echo "VITE_CLIENT_ID=%CLIENT_ID%" >> .env
+          echo "VITE_ISSUER=%ISSUER%" >> .env
           yarn build
 
       - name: deploy
