--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,3 +12,5 @@ serde = '1.0.203'
 uuid = { version = "1.2.2", features = ["v4"] }
 warp = "0.3.3"
 pretty_env_logger = "0.4.0"
+thiserror = "1.0.38"
+futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
