--- a/web/package.json
+++ b/web/package.json
@@ -26,11 +26,12 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
+        "@types/mui-datatables": "^4.3.12",
         "@types/node": "^16.18.58",
         "jsdom": "^23.0.1",
+        "mui-datatables": "^4.3.0",
         "okta-auth": "^0.1.4",
         "react": "^18.2.0",
-        "react-data-table-component": "^7.6.2",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.53.0",
         "react-query": "^3.39.3",
