--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
         "@mui/icons-material": "^5.15.14",
         "@mui/material": "^6.1.2",
         "@mui/styled-engine-sc": "^6.0.0-alpha.2",
+        "@mui/x-date-pickers": "^7.23.0",
         "@okta/okta-auth-js": "^7.5.1",
         "@okta/okta-react": "^6.7.0",
         "@tanstack/react-query": "^5.59.0",
@@ -28,6 +29,8 @@
         "@types/jest": "^27.5.2",
         "@types/mui-datatables": "^4.3.12",
         "@types/node": "^16.18.58",
+        "datejs": "^1.0.0-rc3",
+        "dayjs": "^1.11.13",
         "jsdom": "^23.0.1",
         "mui-datatables": "^4.3.0",
         "okta-auth": "^0.1.4",
