--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,6 +13,8 @@ serde_json = "1.0.132"
 serde_compact = "1.0.0-rc.3"
 uuid = { version = "1.2.2", features = ["v4"] }
 warp = "0.3.3"
+bytes = "1.9.0"
+rust-s3 = "0.27.0-rc4"
 pretty_env_logger = "0.4.0"
 thiserror = "1.0.38"
 futures = { version = "0.3.25", default-features = false, features = [
