--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
         "@mui/icons-material": "^5.15.14",
-        "@mui/material": "^6.1.2",
+        "@mui/lab": "^6.0.0-beta.17",
+        "@mui/material": "^6.1.9",
         "@mui/styled-engine-sc": "^6.0.0-alpha.2",
         "@mui/x-date-pickers": "^7.23.0",
         "@okta/okta-auth-js": "^7.5.1",
