Removed caching of node modules

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,22 +11,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-          cache: 'yarn'
 
       - name: yarn install web
-        working-directory: ./web
         run: |
+          cd web
           yarn install
 
       - name: yarn build
-        working-directory: ./web
         env:
           VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
           VITE_ISSUER: ${{ secrets.VITE_ISSUER }}
         run: |
+          cd web
           rm -f .env
           touch .env
           echo "VITE_CLIENT_ID=%VITE_CLIENT_ID%" >> .env
@@ -34,8 +30,8 @@ jobs:
           yarn build
 
       - name: deploy
-        working-directory: ./web
         run: |
+          cd web
           cp -r build/* /var/www/jewellerycatalogue.onthewifi.com/html
 
       - name: deploy api
