--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,17 +35,13 @@ jobs:
           cp -r build/* /var/www/jewellerycatalogue.onthewifi.com/html
 
       - name: deploy api
-        env:
-          ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          BUCKET_URL: ${{ secrets.BUCKET_URL }}
         run: |
           cd api
           rm -f .env
           touch .env
-          echo "ACCESS_KEY=%ACCESS_KEY%" >> .env
-          echo "SECRET_KEY=%SECRET_KEY%" >> .env
-          echo "BUCKET_URL=%BUCKET_URL%" >> .env
+          echo "ACCESS_KEY= ${{ secrets.ACCESS_KEY }}" >> .env
+          echo "SECRET_KEY= ${{ secrets.SECRET_KEY }}" >> .env
+          echo "BUCKET_URL= ${{ secrets.BUCKET_URL }}" >> .env
           cargo build --release
           echo ${{ secrets.PASS }} | sudo -S systemctl stop api-server.service
           echo ${{ secrets.PASS }} | sudo -S cp target/release/api-server /usr/local/bin/api-server
