--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,19 +7,25 @@
         "postBuild": "cp package*.json build/package.json && cd build && yarn"
     },
     "dependencies": {
-        "body-parser": "^1.20.3",
-        "cors": "^2.8.5",
         "dotenv": "^16.4.7",
-        "express": "^4.21.2",
+        "koa": "^2.16.0",
+        "koa-bodyparser": "^4.4.1",
+        "koa-cors": "^0.0.16",
+        "koa-logger": "^3.2.1",
+        "koa-router": "^13.0.1",
         "mongodb": "^6.13.1",
+        "ts-node": "^10.9.2",
         "types": "1.0.0",
-        "typescript": "^5.7.3"
+        "typescript": "^5.8.2"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
     "devDependencies": {
-        "@types/cors": "^2.8.17",
-        "@types/express": "^5.0.0",
         "ts-loader": "^9.5.2",
-        "ts-node-dev": "^2.0.0"
+        "ts-node-dev": "^2.0.0",
+        "@types/koa": "^2.15.0",
+        "@types/koa-bodyparser": "^4.3.12",
+        "@types/koa-cors": "^0.0.6",
+        "@types/koa-logger": "^3.1.5",
+        "@types/koa-router": "^7.4.8"
     }
 }
