added catalogue types and removed logs

--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -4,11 +4,10 @@
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
-        "rootDir": "./",
-        "outDir": "build"
+        "rootDir": "./src",
+        "outDir": "./build",
     },
     "include": [
-        "./src",
-        "./index.ts"
+        "./src/**/*",
     ]
 }
