--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "scripts": {
         "start": "vite --port 3000",
-        "build": "tsc && vite build --emptyOutDir",
+        "build": "tsc --skipLibCheck && vite build --emptyOutDir",
         "test": "vitest --coverage",
         "preview": "vite preview"
     },
@@ -30,14 +30,15 @@
         "react-router-dom": "^6.21.1",
         "react-scripts": "5.0.1",
         "styled-components": "^6.1.13",
+        "types": "1.0.0",
         "web-vitals": "^2.1.4",
-        "types": "1.0.0"
+        "typescript": "^5.2.2"
     },
     "devDependencies": {
+        "@types/react": "^19.0.12",
         "@types/jest": "^27.5.2",
         "@types/mui-datatables": "^4.3.12",
         "@types/node": "^16.18.58",
-        "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
         "@typescript-eslint/eslint-plugin": "^6.10.0",
         "@typescript-eslint/parser": "^6.10.0",
@@ -50,8 +51,6 @@
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-react-refresh": "^0.4.4",
-        "prettier": "^3.1.0",
-        "typescript": "^5.2.2",
         "vite": "^5.0.0",
         "vitest": "^1.1.0",
         "vitest-fetch-mock": "^0.2.2"
