--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -10,7 +10,6 @@
         ],
         "rootDir": "src",
         "allowJs": false,
-        "skipLibCheck": true,
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": true,
@@ -33,7 +32,8 @@
     },
     "include": [
         "src",
-        "eslintrc.js"
+        "eslintrc.js",
+        "vite-env.d.ts"
     ],
     "references": [
         {
