fixed build for api

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -13,18 +13,13 @@
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "rootDir": "./src",
-        "skipLibCheck": true,
-        "paths": {
-            "*": [
-                "node_modules/*"
-            ]
-        }
+        "skipLibCheck": true
     },
     "ts-node": {
         "files": true
     },
     "include": [
-        "src/**/*",
+        "src/**/*"
     ],
     "references": [
         {
