fixed copy step in depoying api

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,5 +41,5 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           BUCKET_URL: ${{ secrets.BUCKET_URL }}
         run: |
-          echo ${{ secrets.PASS }} | sudo -S cp packages/api/build/. /usr/local/bin/jewellerycatalogue-api-server
+          echo ${{ secrets.PASS }} | sudo -S cp -a packages/api/build/. /usr/local/bin/jewellerycatalogue-api-server
           echo ${{ secrets.PASS }} | sudo -S systemctl restart jewellerycatalogue-api-server.service
