--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,9 @@
 {
-    "name": "types",
+    "name": "@jewellery-catalogue/types",
     "version": "1.0.0",
+    "private": true,
+    "main": "build/index.js",
+    "types": "build/index.d.ts",
     "scripts": {
         "build": "tsc --pretty --skipLibCheck"
     },
