--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,8 @@
 {
-    "name": "api",
+    "name": "@jewellery-catalogue/api",
     "version": "1.0.0",
+    "main": "build/index.js",
+    "types": "build/index.d.ts",
     "scripts": {
         "start": "ts-node-dev --watch 'src/**/*.ts' src/index.ts",
         "build": "tsc --pretty --skipLibCheck",
@@ -15,7 +17,7 @@
         "koa-router": "^13.0.1",
         "mongodb": "^6.13.1",
         "ts-node": "^10.9.2",
-        "types": "1.0.0",
+        "@jewellery-catalogue/types": "*",
         "typescript": "^5.8.2"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
