--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -4,10 +4,10 @@
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
-        "rootDir": "./src",
-        "outDir": "./build",
+        "rootDir": "src",
+        "outDir": "build"
     },
     "include": [
-        "./src/**/*",
+        "src"
     ]
 }
