--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,7 +30,7 @@
         "react-router-dom": "^6.21.1",
         "react-scripts": "5.0.1",
         "styled-components": "^6.1.13",
-        "types": "1.0.0",
+        "@jewellery-catalogue/types": "1.0.0",
         "web-vitals": "^2.1.4",
         "typescript": "^5.2.2"
     },
