--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL }}
         run: |
-          yarn workspace web build
+          yarn workspace @jewellery-catalogue/web build
 
       - name: deploy web
         run: |
