--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,7 +3,7 @@
         "baseUrl": "./",
         "composite": true,
         "declaration": true,
-        "module": "commonjs",
+        "module": "ESNext",
         "moduleResolution": "node",
         "target": "ES2020",
         "noImplicitAny": true,
