--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -2,15 +2,11 @@
     "compilerOptions": {
         "composite": true,
         "target": "ESNext",
+        "baseUrl": "./",
         "useDefineForClassFields": true,
-        "lib": [
-            "DOM",
-            "DOM.Iterable",
-            "ESNext"
-        ],
         "rootDir": "src",
         "allowJs": false,
-        "esModuleInterop": false,
+        "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
@@ -27,6 +23,9 @@
         "paths": {
             "@mui/styled-engine": [
                 "./node_modules/@mui/styled-engine-sc"
+            ],
+            "@jewellery-catalogue/types": [
+                "../types/src"
             ]
         }
     },
