--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: install packages 
         run: |
-          yarn
+          yarn install --production
 
       - name: build types
         run: |
