--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "ts-node-dev --watch 'src/**/*.ts' src/index.ts",
         "build": "tsc --pretty --skipLibCheck",
-        "postBuild": "cp package*.json build/package.json && cd build && yarn"
+        "postBuild": "cp package*.json yarn.lock build/ && cd build && yarn install --production"
     },
     "dependencies": {
         "dotenv": "^16.4.7",
