clean yarn cache?

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: install packages 
         run: |
+          yarn cache clean
           yarn install
       - name: build types
         run: |
