--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
         "@mui/lab": "^6.0.0-beta.17",
         "@mui/material": "^6.1.9",
         "@mui/styled-engine-sc": "^6.0.0-alpha.2",
+        "@mui/x-data-grid": "^7.28.3",
         "@mui/x-date-pickers": "^7.23.0",
         "@tanstack/react-query": "^5.59.0",
         "@testing-library/jest-dom": "^5.17.0",
