--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,11 +25,11 @@
         "dayjs": "^1.11.13",
         "jsdom": "^23.0.1",
         "mui-datatables": "^4.3.0",
-        "quill": "^2.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.53.0",
         "react-query": "^3.39.3",
+        "react-quill": "^2.0.0",
         "react-router-dom": "^6.21.1",
         "react-scripts": "5.0.1",
         "styled-components": "^6.1.13",
