--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -5,7 +5,12 @@
         "declarationMap": true,
         "sourceMap": true,
         "rootDir": "./",
-        "outDir": "build"
+        "outDir": "build",
+        "skipLibCheck": true,
+        "strict": true,
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "target": "ESNext"
     },
     "include": [
         "src"
