maybe tsconfig in api

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,9 +1,8 @@
 {
     "compilerOptions": {
-        "baseUrl": "./",
         "composite": true,
         "declaration": true,
-        "module": "CommonJs",
+        "module": "commonjs",
         "moduleResolution": "node",
         "target": "ES2020",
         "noImplicitAny": true,
@@ -13,6 +12,7 @@
         "noUnusedLocals": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
+        "baseUrl": "./",
         "rootDir": "./src",
         "skipLibCheck": true,
         "paths": {
@@ -25,7 +25,9 @@
         "files": true
     },
     "include": [
-        "src"
+        "src/**/*",
+        "types/**/*.d.ts",
+        "types/*.d.ts"
     ],
     "references": [
         {
