--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,13 @@
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "baseUrl": "./",
-        "rootDir": "src"
+        "rootDir": "src",
+        "skipLibCheck": true,
+        "paths": {
+            "*": [
+                "node_modules/*"
+            ]
+        }
     },
     "ts-node": {
         "files": true
