--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,7 +5,8 @@
     "main": "build/index.js",
     "types": "build/index.d.ts",
     "scripts": {
-        "build": "tsc --pretty --skipLibCheck"
+        "build": "tsc --pretty --skipLibCheck",
+        "postinstall": "yarn workspaces run build"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
     "devDependencies": {
