--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -4,7 +4,7 @@
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
-        "rootDir": "./",
+        "rootDir": "src",
         "outDir": "build",
         "skipLibCheck": true,
         "strict": true,
