--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@jewellery-catalogue/api",
     "version": "1.0.0",
+    "type": "module",
     "scripts": {
-        "start": "ts-node-dev --watch 'src/**/*.ts' src/index.ts",
+        "start": "tsx watch src/index.ts",
         "build": "tsc --pretty --skipLibCheck",
         "postBuild": "cp package*.json build/package.json && cd build && yarn"
     },
@@ -25,6 +26,7 @@
         "@types/koa-logger": "^3.1.5",
         "@types/koa-router": "^7.4.8",
         "ts-loader": "^9.5.2",
-        "ts-node-dev": "^2.0.0"
+        "ts-node-dev": "^2.0.0",
+        "tsx": "^4.0.0"
     }
 }
