--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "composite": true,
         "declaration": true,
-        "module": "commonjs",
+        "module": "ESNext",
         "moduleResolution": "node",
         "target": "ES2020",
         "noImplicitAny": true,
@@ -20,9 +20,6 @@
                 "../types/src"
             ]
         }
-    },
-    "ts-node": {
-        "files": true
     },
     "include": [
         "src/**/*",
