--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,10 +2,10 @@
     "name": "@jewellery-catalogue/types",
     "version": "1.0.0",
     "private": true,
-    "main": "build/index.js",
-    "types": "build/index.d.ts",
-    "scripts": {
-        "build": "tsc --pretty --skipLibCheck"
+    "main": "src/index.ts",
+    "types": "src/index.ts",
+    "exports": {
+        ".": "./src/index.ts"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
     "devDependencies": {
