--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,7 +5,13 @@
     "main": "src/index.ts",
     "types": "src/index.ts",
     "exports": {
-        ".": "./src/index.ts"
+        ".": {
+            "development": "./src/index.ts",
+            "default": "./build/index.js"
+        }
+    },
+    "scripts": {
+        "build": "tsc"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
     "devDependencies": {
