--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "compilerOptions": {
+        "composite": true,
+        "declaration": true,
+        "outDir": "build",
+        "rootDir": "src",
         "target": "ESNext",
         "module": "ESNext",
         "moduleResolution": "Node",
