use direct connection

--- a/.env.staging
+++ b/.env.staging
@@ -3,12 +3,12 @@ VITE_API_URL=http://localhost:5001
 VITE_AUTH_URL=http://localhost:5002
 
 # API Configuration
-API_CONNECTION_URI=mongodb://jewellery-catalogue-staging-mongodb:28020
+API_CONNECTION_URI=mongodb://jewellery-catalogue-staging-mongodb:28020/?directConnection=true
 API_DATABASE_NAME=jewellery-catalogue-staging
 API_PORT=5001
 
 # Auth Configuration  
-AUTH_CONNECTION_URI=mongodb://jewellery-catalogue-staging-auth-mongodb:28021
+AUTH_CONNECTION_URI=mongodb://jewellery-catalogue-staging-auth-mongodb:28021/?directConnection=true
 AUTH_DATABASE_NAME=jewellery-catalogue-auth-staging
 AUTH_PORT=5002
 
