--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -114,7 +114,7 @@ services:
       logging_job: "jewellery-catalogue-staging-web"
       logging_stack: "jewellery-catalogue-staging"
     healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "80"]
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
       interval: 30s
       timeout: 10s
       retries: 3
