--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '22.17.0'
+          cache: 'yarn'
 
       - name: Enable Corepack
         run: corepack enable
@@ -99,7 +100,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '22.17.0'
+          cache: 'yarn'
 
       - name: Enable Corepack
         run: corepack enable
