--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build
 .env
 tsconfig.tsbuildinfo
 .vscode
+.eslintcache
+/tmp/.buildx-cache
 
 packages/web/test-results/
 packages/web/playwright-report/
